--- a/mascotas.html
+++ b/mascotas.html
@@ -80,31 +80,51 @@
   <!-- Cards -->
   <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
-      <div class="card">
-        <a href="/veterinaria.html" style="text-decoration: none;">
-          <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
+      <div class="card h-100">
+        <a href="/perros.html" style="text-decoration: none;">
+          <img src="img/perros.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
-            <p id="card">Veterinaria</p>
+            <p id="card">Perros</p>
           </div>
         </a>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <a href="/mascotas.html" style="text-decoration: none;">
-          <img src="img/petshop.jpg" class="card-img-top" alt="...">
+        <a href="/gatos.html" style="text-decoration: none;">
+          <img src="img/gatos.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
-            <p id="card">PetShop</p>
+            <p id="card">Gatos</p>
           </div>
         </a>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <a href="/peluqueria.html" style="text-decoration: none;">
-          <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
+        <a href="/roedores.html" style="text-decoration: none;">
+          <img src="img/roedores.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
-            <p id="card">Peluquería</p>
+            <p id="card">Roedores</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <a href="/aves.html" style="text-decoration: none;">
+          <img src="img/aves.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
+          <div id="card">
+            <p id="card">Aves</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <a href="/peces.html" style="text-decoration: none;">
+          <img src="img/peces.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
+          <div id="card">
+            <p id="card">Peces</p>
           </div>
         </a>
       </div>
