--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
   <!-- Cards -->
   <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="/veterinaria.html" style="text-decoration: none;">
-          <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
+          <img src="img/veterinaria.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
             <p id="card">Veterinaria</p>
           </div>
@@ -89,9 +89,9 @@
       </div>
     </div>
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="/mascotas.html" style="text-decoration: none;">
-          <img src="img/petshop.jpg" class="card-img-top" alt="...">
+          <img src="img/petshop.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
             <p id="card">PetShop</p>
           </div>
@@ -99,9 +99,9 @@
       </div>
     </div>
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="/peluqueria.html" style="text-decoration: none;">
-          <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
+          <img src="img/peluqueria.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
             <p id="card">Peluquería</p>
           </div>
