--- a/mascotas.html
+++ b/mascotas.html
@@ -80,7 +80,7 @@
   <!-- Cards -->
   <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
-      <div class="card h-100">
+      <div class="card">
         <a href="/perros.html" style="text-decoration: none;">
           <img src="img/perros.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
           <div id="card">
