--- a/servicios.html
+++ b/servicios.html
@@ -73,12 +73,34 @@
     </div>
     </div>
     <div id="nav" style="height:189px;">
-      <h3 style="color: whitesmoke; padding-top: 10px;">Servicios</h3>
+      <h3 style="color: whitesmoke; padding-top: 10px;">Mascotas</h3>
     <div id="imgnav" style="height:180px;"></div> 
   </div>
 
   <!-- Cards -->
+  <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <a href="/veterinaria.html" style="text-decoration: none;">
+          <img src="img/veterinaria3.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
+          <div id="card">
+            <p id="card">Veterinaria</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <a href="/peluqueria.html" style="text-decoration: none;">
+          <img src="img/peluqueria2.jpg" class="card-img-top" alt="..." style="border-radius: 20px 20px 0 0;">
+          <div id="card">
+            <p id="card">Peluqueria</p>
+          </div>
+        </a>
+      </div>
+    </div>
   
+  </div>
   
   <!-- Footer -->
   <div class="rosa" style="padding: 25px;">
