--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 			</div>
 
 			<!-- Contacto -->
-			<div class="blanco" id="contactoIndex">
+			<div class="blanco container-fluid" id="contactoIndex">
 				<h1>Envianos tu Consulta</h1>
 				<form
 					id="my-form"
