--- a/perros.html
+++ b/perros.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<link rel="stylesheet" href="Styles/styleExtra.css" />
+		<link rel="stylesheet" href="Styles/perros.css" />
 
 		<!-- Bootstrap CSS -->
 		<link
@@ -248,22 +249,176 @@
 		</div>
 
 		<!-- Cards -->
-		<div class="row justify-content-end align-items-center">
-			<div class="col-auto">
-				<button id="leftButton">
-					<img src="" alt="Boton Izquierdo" />
-				</button>
-				<button id="leftButton">
-					<img src="" alt="Boton Izquierdo" />
-				</button>
+		<div>
+			<div class="row justify-content-start align-items-center">
+				<div class="col-auto">
+					<h1>Alimentos Secos</h1>
+				</div>
+			</div>
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto marginRightButton">
+					<button id="secosLeftButton" class="buttons">
+						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
+					</button>
+					<button id="secosRightButton" class="buttons">
+						<img src="img/rightButton.PNG" alt="Boton Derecho" />
+					</button>
+				</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto productImg">
+					<img id="secosImg1" src="" alt="producto1" />
+					<p id="secosBrand1"></p>
+					<p id="secosName1"></p>
+					<p id="secosWeight1"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="secosImg2" src="" alt="producto2" />
+					<p id="secosBrand2"></p>
+					<p id="secosName2"></p>
+					<p id="secosWeight2"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="secosImg3" src="" alt="producto3" />
+					<p id="secosBrand3"></p>
+					<p id="secosName3"></p>
+					<p id="secosWeight3"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="secosImg4" src="" alt="producto4" />
+					<p id="secosBrand4"></p>
+					<p id="secosName4"></p>
+					<p id="secosWeight4"></p>
+				</div>
 			</div>
 		</div>
-		<div class="row justify-content-between align-items-center">
-			<div class="col-auto">
-				<img id="img1" src="" alt="producto1" />
-				<img id="img2" src="" alt="producto2" />
-				<img id="img3" src="" alt="producto3" />
-				<img id="img4" src="" alt="producto4" />
+		<div>
+			<div class="row justify-content-start align-items-center">
+				<div class="col-auto">
+					<h1>Alimentos Húmedos</h1>
+				</div>
+			</div>
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto marginRightButton">
+					<button id="humedosLeftButton" class="buttons">
+						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
+					</button>
+					<button id="humedosRightButton" class="buttons">
+						<img src="img/rightButton.PNG" alt="Boton Derecho" />
+					</button>
+				</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto productImg">
+					<img id="humedosImg1" src="" alt="producto1" />
+					<p id="humedosBrand1"></p>
+					<p id="humedosName1"></p>
+					<p id="humedosWeight1"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="humedosImg2" src="" alt="producto2" />
+					<p id="humedosBrand2"></p>
+					<p id="humedosName2"></p>
+					<p id="humedosWeight2"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="humedosImg3" src="" alt="producto3" />
+					<p id="humedosBrand3"></p>
+					<p id="humedosName3"></p>
+					<p id="humedosWeight3"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="humedosImg4" src="" alt="producto4" />
+					<p id="humedosBrand4"></p>
+					<p id="humedosName4"></p>
+					<p id="humedosWeight4"></p>
+				</div>
+			</div>
+		</div>
+		<div>
+			<div class="row justify-content-start align-items-center">
+				<div class="col-auto">
+					<h1>Snaks</h1>
+				</div>
+			</div>
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto marginRightButton">
+					<button id="snaksLeftButton" class="buttons">
+						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
+					</button>
+					<button id="snaksRightButton" class="buttons">
+						<img src="img/rightButton.PNG" alt="Boton Derecho" />
+					</button>
+				</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto productImg">
+					<img id="snaksImg1" src="" alt="producto1" />
+					<p id="snaksBrand1"></p>
+					<p id="snaksName1"></p>
+					<p id="snaksWeight1"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="snaksImg2" src="" alt="producto2" />
+					<p id="snaksBrand2"></p>
+					<p id="snaksName2"></p>
+					<p id="snaksWeight2"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="snaksImg3" src="" alt="producto3" />
+					<p id="snaksBrand3"></p>
+					<p id="snaksName3"></p>
+					<p id="snaksWeight3"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="snaksImg4" src="" alt="producto4" />
+					<p id="snaksBrand4"></p>
+					<p id="snaksName4"></p>
+					<p id="snaksWeight4"></p>
+				</div>
+			</div>
+		</div>
+		<div>
+			<div class="row justify-content-start align-items-center">
+				<div class="col-auto">
+					<h1>Accesorios</h1>
+				</div>
+			</div>
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto marginRightButton">
+					<button id="accesoriosLeftButton" class="buttons">
+						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
+					</button>
+					<button id="accesoriosRightButton" class="buttons">
+						<img src="img/rightButton.PNG" alt="Boton Derecho" />
+					</button>
+				</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto productImg">
+					<img id="accesoriosImg1" src="" alt="producto1" />
+					<p id="accesoriosBrand1"></p>
+					<p id="accesoriosName1"></p>
+					<p id="accesoriosWeight1"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="accesoriosImg2" src="" alt="producto2" />
+					<p id="accesoriosBrand2"></p>
+					<p id="accesoriosName2"></p>
+					<p id="accesoriosWeight2"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="accesoriosImg3" src="" alt="producto3" />
+					<p id="accesoriosBrand3"></p>
+					<p id="accesoriosName3"></p>
+					<p id="accesoriosWeight3"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="accesoriosImg4" src="" alt="producto4" />
+					<p id="accesoriosBrand4"></p>
+					<p id="accesoriosName4"></p>
+					<p id="accesoriosWeight4"></p>
+				</div>
 			</div>
 		</div>
 		<!-- Footer -->
@@ -315,6 +470,10 @@
 			</div>
 			<div class="clearfix"></div>
 		</div>
+		<script src="js/productos/perros/perrosSecos.js"></script>
+		<script src="js/productos/perros/perrosHumedos.js"></script>
+		<script src="js/productos/perros/perrosSnaks.js"></script>
+		<script src="js/productos/perros/perrosAccesorios.js"></script>
 
 		<script src="js/main.js"></script>
 
