--- a/roedores.html
+++ b/roedores.html
@@ -329,6 +329,49 @@
 				</div>
 			</div>
 		</div>
+		<div>
+			<div class="row justify-content-start align-items-center">
+				<div class="col-auto">
+					<h1>Hamsteras</h1>
+				</div>
+			</div>
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto marginRightButton">
+					<button id="hamsterasLeftButton" class="buttons">
+						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
+					</button>
+					<button id="hamsterasRightButton" class="buttons">
+						<img src="img/rightButton.PNG" alt="Boton Derecho" />
+					</button>
+				</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
+				<div class="col-auto productImg">
+					<img id="hamsterasImg1" src="" alt="producto1" />
+					<p id="hamsterasBrand1"></p>
+					<p id="hamsterasName1"></p>
+					<p id="hamsterasWeight1"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="hamsterasImg2" src="" alt="producto2" />
+					<p id="hamsterasBrand2"></p>
+					<p id="hamsterasName2"></p>
+					<p id="hamsterasWeight2"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="hamsterasImg3" src="" alt="producto3" />
+					<p id="hamsterasBrand3"></p>
+					<p id="hamsterasName3"></p>
+					<p id="hamsterasWeight3"></p>
+				</div>
+				<div class="col-auto productImg">
+					<img id="hamsterasImg4" src="" alt="producto4" />
+					<p id="hamsterasBrand4"></p>
+					<p id="hamsterasName4"></p>
+					<p id="hamsterasWeight4"></p>
+				</div>
+			</div>
+		</div>
 		<!-- Footer -->
 		<div class="rosa" style="padding: 25px">
 			<div class="logo">
@@ -380,6 +423,7 @@
 		</div>
 		<script src="js/productos/roedores/roedoresAlimentos.js"></script>
 		<script src="js/productos/roedores/roedoresAccesorios.js"></script>
+		<script src="js/productos/roedores/roedoresHamsteras.js"></script>
 		<script src="js/main.js"></script>
 
 		<!-- Bootstrap Bundle with Popper -->
