--- a/gatos.html
+++ b/gatos.html
@@ -32,7 +32,7 @@
 					</div>
 					<div class="col-sm-8">
 						<div class="dir">
-							<p class="dir">
+							<p class="dir navBarInfo">
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
 									x="0px"
@@ -249,157 +249,246 @@
 		</div>
 
 		<!-- Cards -->
-		<div>
-			<div class="row justify-content-start align-items-center">
-				<div class="col-auto">
-					<h1>Alimentos Secos</h1>
+		<div class="cards">
+			<div class="whiteBackground">
+				<div
+					class="row justify-content-between align-items-center cardsHeaders"
+				>
+					<div class="col-auto">
+						<h1>Alimentos Secos</h1>
+					</div>
+					<div class="col-auto">
+						<button id="secosLeftButton" class="buttons">
+							<img
+								src="img/leftButton.PNG"
+								alt="Boton Izquierdo"
+							/>
+						</button>
+						<button id="secosRightButton" class="buttons">
+							<img
+								src="img/rightButton.PNG"
+								alt="Boton Derecho"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="row justify-content-center align-items-center">
+					<div class="col-auto productImg justify-content-center">
+						<img
+							id="secosImg1"
+							class="mx-auto d-block"
+							src=""
+							alt="producto1"
+						/>
+						<p id="secosBrand1"></p>
+						<p id="secosName1"></p>
+						<p id="secosWeight1"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="secosImg2"
+							class="mx-auto d-block"
+							src=""
+							alt="producto2"
+						/>
+						<p id="secosBrand2"></p>
+						<p id="secosName2"></p>
+						<p id="secosWeight2"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="secosImg3"
+							class="mx-auto d-block"
+							src=""
+							alt="producto3"
+						/>
+						<p id="secosBrand3"></p>
+						<p id="secosName3"></p>
+						<p id="secosWeight3"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="secosImg4"
+							class="mx-auto d-block"
+							src=""
+							alt="producto4"
+						/>
+						<p id="secosBrand4"></p>
+						<p id="secosName4"></p>
+						<p id="secosWeight4"></p>
+					</div>
 				</div>
 			</div>
-			<div class="row justify-content-end align-items-center">
-				<div class="col-auto marginRightButton">
-					<button id="secosLeftButton" class="buttons">
-						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
-					</button>
-					<button id="secosRightButton" class="buttons">
-						<img src="img/rightButton.PNG" alt="Boton Derecho" />
-					</button>
+			<div class="pinkBackground">
+				<div class="row justify-content-between cardsHeaders">
+					<div class="col-auto">
+						<h1>Alimentos Húmedos</h1>
+					</div>
+					<div class="col-auto">
+						<button id="humedosLeftButton" class="buttons">
+							<img
+								src="img/leftButton.PNG"
+								alt="Boton Izquierdo"
+							/>
+						</button>
+						<button id="humedosRightButton" class="buttons">
+							<img
+								src="img/rightButton.PNG"
+								alt="Boton Derecho"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="row justify-content-center align-items-center">
+					<div class="col-auto productImg">
+						<img
+							id="humedosImg1"
+							class="mx-auto d-block"
+							src=""
+							alt="producto1"
+						/>
+						<p id="humedosBrand1"></p>
+						<p id="humedosName1"></p>
+						<p id="humedosWeight1"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="humedosImg2"
+							class="mx-auto d-block"
+							src=""
+							alt="producto2"
+						/>
+						<p id="humedosBrand2"></p>
+						<p id="humedosName2"></p>
+						<p id="humedosWeight2"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="humedosImg3"
+							class="mx-auto d-block"
+							src=""
+							alt="producto3"
+						/>
+						<p id="humedosBrand3"></p>
+						<p id="humedosName3"></p>
+						<p id="humedosWeight3"></p>
+					</div>
 				</div>
 			</div>
-			<div class="row justify-content-center align-items-center">
-				<div class="col-auto productImg">
-					<img id="secosImg1" src="" alt="producto1" />
-					<p id="secosBrand1"></p>
-					<p id="secosName1"></p>
-					<p id="secosWeight1"></p>
+			<div class="whiteBackground">
+				<div
+					class="row justify-content-between align-items-center cardsHeaders"
+				>
+					<div class="col-auto">
+						<h1>Snaks</h1>
+					</div>
+					<div class="col-auto">
+						<button id="snaksLeftButton" class="buttons">
+							<img
+								src="img/leftButton.PNG"
+								alt="Boton Izquierdo"
+							/>
+						</button>
+						<button id="snaksRightButton" class="buttons">
+							<img
+								src="img/rightButton.PNG"
+								alt="Boton Derecho"
+							/>
+						</button>
+					</div>
 				</div>
-				<div class="col-auto productImg">
-					<img id="secosImg2" src="" alt="producto2" />
-					<p id="secosBrand2"></p>
-					<p id="secosName2"></p>
-					<p id="secosWeight2"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="secosImg3" src="" alt="producto3" />
-					<p id="secosBrand3"></p>
-					<p id="secosName3"></p>
-					<p id="secosWeight3"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="secosImg4" src="" alt="producto4" />
-					<p id="secosBrand4"></p>
-					<p id="secosName4"></p>
-					<p id="secosWeight4"></p>
-				</div>
-			</div>
-		</div>
-		<div>
-			<div class="row justify-content-start align-items-center">
-				<div class="col-auto">
-					<h1>Alimentos Húmedos</h1>
-				</div>
-			</div>
-			<div class="row justify-content-end align-items-center">
-				<div class="col-auto marginRightButton">
-					<button id="humedosLeftButton" class="buttons">
-						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
-					</button>
-					<button id="humedosRightButton" class="buttons">
-						<img src="img/rightButton.PNG" alt="Boton Derecho" />
-					</button>
-				</div>
-			</div>
-			<div class="row justify-content-center align-items-center">
-				<div class="col-auto productImg">
-					<img id="humedosImg1" src="" alt="producto1" />
-					<p id="humedosBrand1"></p>
-					<p id="humedosName1"></p>
-					<p id="humedosWeight1"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="humedosImg2" src="" alt="producto2" />
-					<p id="humedosBrand2"></p>
-					<p id="humedosName2"></p>
-					<p id="humedosWeight2"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="humedosImg3" src="" alt="producto3" />
-					<p id="humedosBrand3"></p>
-					<p id="humedosName3"></p>
-					<p id="humedosWeight3"></p>
+				<div class="row justify-content-center align-items-center">
+					<div class="col-auto productImg">
+						<img
+							id="snaksImg1"
+							class="mx-auto d-block"
+							src=""
+							alt="producto1"
+						/>
+						<p id="snaksBrand1"></p>
+						<p id="snaksName1"></p>
+						<p id="snaksWeight1"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="snaksImg2"
+							class="mx-auto d-block"
+							src=""
+							alt="producto2"
+						/>
+						<p id="snaksBrand2"></p>
+						<p id="snaksName2"></p>
+						<p id="snaksWeight2"></p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div>
-			<div class="row justify-content-start align-items-center">
-				<div class="col-auto">
-					<h1>Snaks</h1>
+			<div class="pinkBackground">
+				<div
+					class="row justify-content-between align-items-center cardsHeaders"
+				>
+					<div class="col-auto">
+						<h1>Accesorios</h1>
+					</div>
+					<div class="col-auto">
+						<button id="accesoriosLeftButton" class="buttons">
+							<img
+								src="img/leftButton.PNG"
+								alt="Boton Izquierdo"
+							/>
+						</button>
+						<button id="accesoriosRightButton" class="buttons">
+							<img
+								src="img/rightButton.PNG"
+								alt="Boton Derecho"
+							/>
+						</button>
+					</div>
 				</div>
-			</div>
-			<div class="row justify-content-end align-items-center">
-				<div class="col-auto marginRightButton">
-					<button id="snaksLeftButton" class="buttons">
-						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
-					</button>
-					<button id="snaksRightButton" class="buttons">
-						<img src="img/rightButton.PNG" alt="Boton Derecho" />
-					</button>
-				</div>
-			</div>
-			<div class="row justify-content-center align-items-center">
-				<div class="col-auto productImg">
-					<img id="snaksImg1" src="" alt="producto1" />
-					<p id="snaksBrand1"></p>
-					<p id="snaksName1"></p>
-					<p id="snaksWeight1"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="snaksImg2" src="" alt="producto2" />
-					<p id="snaksBrand2"></p>
-					<p id="snaksName2"></p>
-					<p id="snaksWeight2"></p>
-				</div>
-			</div>
-		</div>
-		<div>
-			<div class="row justify-content-start align-items-center">
-				<div class="col-auto">
-					<h1>Accesorios</h1>
-				</div>
-			</div>
-			<div class="row justify-content-end align-items-center">
-				<div class="col-auto marginRightButton">
-					<button id="accesoriosLeftButton" class="buttons">
-						<img src="img/leftButton.PNG" alt="Boton Izquierdo" />
-					</button>
-					<button id="accesoriosRightButton" class="buttons">
-						<img src="img/rightButton.PNG" alt="Boton Derecho" />
-					</button>
-				</div>
-			</div>
-			<div class="row justify-content-center align-items-center">
-				<div class="col-auto productImg">
-					<img id="accesoriosImg1" src="" alt="producto1" />
-					<p id="accesoriosBrand1"></p>
-					<p id="accesoriosName1"></p>
-					<p id="accesoriosWeight1"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="accesoriosImg2" src="" alt="producto2" />
-					<p id="accesoriosBrand2"></p>
-					<p id="accesoriosName2"></p>
-					<p id="accesoriosWeight2"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="accesoriosImg3" src="" alt="producto3" />
-					<p id="accesoriosBrand3"></p>
-					<p id="accesoriosName3"></p>
-					<p id="accesoriosWeight3"></p>
-				</div>
-				<div class="col-auto productImg">
-					<img id="accesoriosImg4" src="" alt="producto4" />
-					<p id="accesoriosBrand4"></p>
-					<p id="accesoriosName4"></p>
-					<p id="accesoriosWeight4"></p>
+				<div class="row justify-content-center align-items-center">
+					<div class="col-auto productImg">
+						<img
+							id="accesoriosImg1"
+							class="mx-auto d-block"
+							src=""
+							alt="producto1"
+						/>
+						<p id="accesoriosBrand1"></p>
+						<p id="accesoriosName1"></p>
+						<p id="accesoriosWeight1"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="accesoriosImg2"
+							class="mx-auto d-block"
+							src=""
+							alt="producto2"
+						/>
+						<p id="accesoriosBrand2"></p>
+						<p id="accesoriosName2"></p>
+						<p id="accesoriosWeight2"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="accesoriosImg3"
+							class="mx-auto d-block"
+							src=""
+							alt="producto3"
+						/>
+						<p id="accesoriosBrand3"></p>
+						<p id="accesoriosName3"></p>
+						<p id="accesoriosWeight3"></p>
+					</div>
+					<div class="col-auto productImg">
+						<img
+							id="accesoriosImg4"
+							class="mx-auto d-block"
+							src=""
+							alt="producto4"
+						/>
+						<p id="accesoriosBrand4"></p>
+						<p id="accesoriosName4"></p>
+						<p id="accesoriosWeight4"></p>
+					</div>
 				</div>
 			</div>
 		</div>
