--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<!-- Navbar -->
-		<div class="container-fluid" style="border: solid">
+		<div class="container-fluid">
 			<div id="nav" class="sticky-top" style="padding-top: 10px">
 				<div class="navbar-light">
 					<div class="row">
@@ -26,13 +26,13 @@
 							<a class="navbar-brand" href="index.html"
 								><img
 									src="img/LogoMascotaManía Blanco.png"
-									style="width: 200px; height: 77px"
+									class="img-fluid"
 									alt=""
 							/></a>
 						</div>
 						<div class="col-sm-8">
 							<div class="dir">
-								<p class="dir">
+								<p class="dir navBarInfo">
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
 										x="0px"
@@ -307,81 +307,51 @@
 			<!-- Marcas -->
 			<div id="marcas" class="rosa">
 				<h1>Marcas</h1>
-				<div class="row row-cols-2 row-cols-md-6 g-4">
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/royal.png"
-								class="card-img-top"
-								alt="..."
-							/>
+				<div
+					class="row row-cols-2 row-cols-md-6 g-4 align-items-center justify-content-center"
+				>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/royal.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/purina.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/purina.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/Eukanuba.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/Eukanuba.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/nature.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/nature.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/nutrique.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/nutrique.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/monami.jfif"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/monami.jfif" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/iams.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/iams.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
-							<img
-								src="img/marcas/gepsa.png"
-								class="card-img-top"
-								alt="..."
-							/>
+					<div class="col card">
+						<div class="card brands h-100">
+							<img src="img/marcas/gepsa.png" alt="..." />
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/uniq.png"
 								class="card-img-top"
@@ -389,8 +359,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/tcg.png"
 								class="card-img-top"
@@ -398,8 +368,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/oldprince.png"
 								class="card-img-top"
@@ -407,8 +377,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/krof.png"
 								class="card-img-top"
@@ -416,8 +386,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/optimum.png"
 								class="card-img-top"
@@ -425,8 +395,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/ferplast.png"
 								class="card-img-top"
@@ -434,8 +404,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/golocan.png"
 								class="card-img-top"
@@ -443,8 +413,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/drzoo.png"
 								class="card-img-top"
@@ -452,8 +422,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/animalpet.png"
 								class="card-img-top"
@@ -461,8 +431,8 @@
 							/>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card h-100">
+					<div class="col card">
+						<div class="card brands h-100">
 							<img
 								src="img/marcas/per-ros.png"
 								class="card-img-top"
@@ -474,7 +444,7 @@
 			</div>
 
 			<!-- Nosotros -->
-			<div id="contacto" class="blanco" style="height: 350px">
+			<div class="blanco" style="height: 350px">
 				<h1>Sobre Nosotros</h1>
 				<img src="img/Nosotros.jpeg" alt="" id="nosotros" />
 				<p id="nosotros">
@@ -492,6 +462,7 @@
 			</div>
 
 			<!-- Mapa -->
+			<div id="contacto"></div>
 			<div id="ubi" class="rosa">
 				<div id="mapa">
 					<iframe
@@ -500,7 +471,7 @@
 							border: 0;
 							align-content: center;
 							display: block;
-							padding: 0 15px;
+							padding: 0 15px !important;
 						"
 						allowfullscreen=""
 						loading="lazy"
@@ -608,7 +579,7 @@
 			</div>
 
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
