--- a/peces.html
+++ b/peces.html
@@ -151,35 +151,35 @@
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/perros.html"
+												href="perros.html"
 												>Perros</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/gatos.html"
+												href="gatos.html"
 												>Gatos</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/roedores.html"
+												href="roedores.html"
 												>Roedores</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/aves.html"
+												href="aves.html"
 												>Aves</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/peces.html"
+												href="peces.html"
 												>Peces</a
 											>
 										</li>
