--- a/servicios.html
+++ b/servicios.html
@@ -150,35 +150,35 @@
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/perros.html"
+												href="perros.html"
 												>Perros</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/gatos.html"
+												href="gatos.html"
 												>Gatos</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/roedores.html"
+												href="roedores.html"
 												>Roedores</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/aves.html"
+												href="aves.html"
 												>Aves</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/peces.html"
+												href="peces.html"
 												>Peces</a
 											>
 										</li>
@@ -213,14 +213,14 @@
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/veterinaria.html"
+												href="veterinaria.html"
 												>Veterinaria</a
 											>
 										</li>
 										<li>
 											<a
 												class="dropdown-item menu"
-												href="/peluqueria.html"
+												href="peluqueria.html"
 												>Peluqueria</a
 											>
 										</li>
